Merge poms (#181)