@@ -85,6 +85,22 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>flatten-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+			</plugin>
 		</plugins>
 		<pluginManagement>
 			<plugins>
@@ -95,6 +111,16 @@
 					<configuration>
 						<source>${maven.compiler.source}</source>
 						<target>${maven.compiler.target}</target>
+						<compilerArgs>
+							<arg>--add-exports</arg>
+							<arg>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+							<arg>--add-exports</arg>
+							<arg>jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+							<arg>--add-exports</arg>
+							<arg>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+							<arg>--add-exports</arg>
+							<arg>jdk.javadoc/jdk.javadoc.internal.tool=ALL-UNNAMED</arg>
+						</compilerArgs>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -141,21 +167,22 @@
 							</configuration>
 						</execution>
 					</executions>
+					<configuration>
+						<doclint>none</doclint>
+						<useStandardDocletOptions>true</useStandardDocletOptions>
+						<additionalOptions>
+							<additionalOption>--add-exports</additionalOption>
+							<additionalOption>jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</additionalOption>
+							<additionalOption>--add-exports</additionalOption>
+							<additionalOption>jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</additionalOption>
+						</additionalOptions>
+					</configuration>
 				</plugin>
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-deploy-plugin</artifactId>
 					<version>3.1.1</version>
-				</plugin>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-release-plugin</artifactId>
-					<version>3.0.1</version>
-					<configuration>
-						<tagNameFormat>v@{project.version}</tagNameFormat>
-						<autoVersionSubmodules>true</autoVersionSubmodules>
-					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
